--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,29 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<header>
+    <h2> Cornell University </h2>
+</header>
+
+<header>
+    <h3> TA Experience </h3>
+</header>
+
+<ul>
+    <li><b>Fall 2024</b> CS 2800: Discrete Structures *</li>
+    <li><b>Spring 2024</b> CS 4110: Programming Languages and Logics *</li>
+    <li><b>Fall 2023</b> CS 2800: Discrete Structures *</li>
+    <li><b>Spring 2023</b> CS 2800: Discrete Structures *</li>
+    <li><b>Fall 2022</b> CS 4820: Introduction to Analysis of Algorithms *</li>
+    <li><b>Spring 2022</b> CS 2800: Discrete Structures *</li>
+    <li><b>Fall 2021</b> CS 3110: Data Structures and Functional Programming </li>
+    <li><b>Spring 2021</b> CS 2800: Discrete Structures </li>
+    <li><b>Fall 2020</b> MSE 1140: Introduction to Materials Science </li>
+
+</ul>
+
+* denotes receiving a teaching award in that semester
+
+<!--{% for post in site.teaching reversed %}-->
+<!--  {% include archive-single.html %}-->
+<!--{% endfor %}-->
