--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,9 @@ author_profile: true
 
 {% include base_path %}
 
+Teaching has always been a huge passion of mine, and I have TAd a variety of courses during my academic career.
+I hope to continue teaching in the future, and I am always looking for new opportunities.
+
 <header>
     <h2> Cornell University </h2>
 </header>
@@ -28,7 +31,7 @@ author_profile: true
 
 </ul>
 
-* denotes receiving a teaching award in that semester
+* denotes receiving a teaching award
 
 <!--{% for post in site.teaching reversed %}-->
 <!--  {% include archive-single.html %}-->
