Updated titles to be accurate

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -19,7 +19,7 @@ I hope to continue teaching in the future, and I am always looking for new oppor
 </header>
 
 <ul>
-    <li><b>Fall 2024</b> CS 2800: Discrete Structures *</li>
+    <li><b>Fall 2024</b> CS 2800: Mathematical Foundations of Computing *</li>
     <li><b>Spring 2024</b> CS 4110: Programming Languages and Logics *</li>
     <li><b>Fall 2023</b> CS 2800: Discrete Structures *</li>
     <li><b>Spring 2023</b> CS 2800: Discrete Structures *</li>
@@ -27,7 +27,7 @@ I hope to continue teaching in the future, and I am always looking for new oppor
     <li><b>Spring 2022</b> CS 2800: Discrete Structures *</li>
     <li><b>Fall 2021</b> CS 3110: Data Structures and Functional Programming </li>
     <li><b>Spring 2021</b> CS 2800: Discrete Structures </li>
-    <li><b>Fall 2020</b> MSE 1140: Introduction to Materials Science </li>
+    <li><b>Fall 2020</b> MSE 1140: Materials: The Future of Energy </li>
 
 </ul>
 
